cabal-version:      2.4
name:               networkHTTP
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Haskell concurrent HTTP Requests test.

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         ariady.putra@gmail.com

extra-source-files: CHANGELOG.md

executable networkHTTP
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                 ,    bytestring
    --           ,    unordered-containers
                 ,    aeson, text, scientific
    --           ,    lens
                 ,    async
    --           ,    network-simple
                 ,    http-conduit
    --           ,    HTTP
    hs-source-dirs:   app
    default-language: Haskell2010
